--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "chart.js": "^4.4.6",
+    "chartjs-gauge": "^0.3.0",
     "core-js": "^3.8.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
+    "gaugeJS": "^1.3.9",
     "mqtt": "^5.10.3",
     "pinia": "^2.2.6",
     "vue": "^3.2.13",
